Finish app without tests

--- a/ExampleAppCoin/Resources/Strings/Localizable.strings
+++ b/ExampleAppCoin/Resources/Strings/Localizable.strings
@@ -1,1 +1,10 @@
 
+"titleSplash" = "Olá, vamos converter? \n:)";
+"titleBrlCoin" = "BRL - Real brasileiro";
+"titleUsdCoin" = "USD - Dólar dos EUA";
+"titleAudCoin" = "AUD - Dólar australiano";
+"titlePhpCoin" = "PHP - Peso filipino";
+"titlePlnCoin" = "PLN - Zloty polonês";
+"titleKrwCoin" = "KRW - Won sul-coreano";
+"titleCadCoin" = "CAD - Dólar canadense";
+"cellNotFound" = "célula não encontrada";
